ecmascript/parser/tests/test262-error-references/fail/5bbf7371c3c77f3c.module.js.stderr
error: Expected from, got ;
 --> $DIR/tests/test262-parser/fail/5bbf7371c3c77f3c.module.js:1:7
  |
1 | import;
  |       ^

